Try verification again.

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <title>About Me (Steve) - Bytes and Bikes</title>
   <meta name="author" content="Steven Oxley">
+  <meta name="google-site-verification" content="O5QS4UHweBcN5HHA4m_t4Ef7Y2mWjkbv3-0CErXyVYc" />
 
   
   <meta name="description" content="        About Me (Steve)          I&#8217;m an aspiring software developer currently located in Chicago.  I enjoy programming, gaming, and riding t...">
