--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Steven Oxley">
 
   
-  <meta name="description" content="About Me (Steve) I&rsquo;m an aspiring software developer currently located in Chicago. I enjoy programming, gaming, and riding through the woods at &hellip;">
+  <meta name="description" content="About Me (Steve) I&rsquo;m an aspiring software developer currently located in Reno, Nevada. I enjoy programming, snowboarding, and riding through &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -84,13 +84,11 @@
     
   </header>
   
-  <p>I&rsquo;m an aspiring software developer currently located in Chicago.  I enjoy programming, gaming, and riding through the woods at breakneck speeds on my mountain bike.</p>
+  <p>I&rsquo;m an aspiring software developer currently located in Reno, Nevada.  I enjoy programming, snowboarding, and riding through the woods at breakneck speeds on my mountain bike.</p>
 
 <ul>
 <li>You can find my twitter here: <a href="http://twitter.com/xonev">http://twitter.com/xonev</a>,</li>
-<li>my travel blog here: <a href="http://stevenoxley.blogspot.com/">http://stevenoxley.blogspot.com/</a>,</li>
-<li>some technical posts from me and some of my friends here: <a href="http://www.pointlessrants.com/">http://www.pointlessrants.com/</a>,</li>
-<li>and, finally,  my github here: <a href="https://github.com/">https://github.com/xonev</a>.</li>
+<li>and my github here: <a href="https://github.com/">https://github.com/xonev</a>.</li>
 </ul>
 
 
@@ -144,7 +142,7 @@
     </div>
   </div>
   <footer role="contentinfo"><p>
-  Copyright &copy; 2014 - Steven Oxley -
+  Copyright &copy; 2015 - Steven Oxley -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
 
